--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <link rel="stylesheet" href="https://github.com/RhyanCodes/RhyanCodes.github.io/blob/main/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title></title>
   </head>
