--- a/Assignment2.html
+++ b/Assignment2.html
@@ -29,7 +29,7 @@
     <br>
     <textarea name="name" rows="8" cols="70">&lt;p&gt;Study button, input, form and textarea elements&lt;/p&gt;</textarea>
     <br> <br>
-    <iframe src="RhyanCodes.github.io/Assignment1.HTML" width="575" height="650"></iframe>
+    <iframe src="https://rhyancodes.github.io/Assignment1.html" width="575" height="650"></iframe>
 
   </body>
 </html>
