--- a/index.html
+++ b/index.html
@@ -1,27 +1,115 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
-    <title></title>
+    <title>Iceland</title>
+    <link rel="stylesheet" href="Project1style.css">
   </head>
   <body>
-    <ul>
-      <li>Review</li>
-    <div class="notes">
-
-      <ol class="notes1">
-        <li>Assignment 1</li>
-        <li>Survey</li>
-        <li>Day 1 Class</li>
-      </ol></div>
-      <li><b>HTML Elements and Attributes</b></li>
-      <li>Atom/Notepad++</li>
-      <li><i>CSS</i></li>
-      <li>Register Github Account</li>
-      <li>Publish Your Website</li>
-    </ul>
-   
+<div class="page1Top">
+  <div class="leftIcon">
+    <img src="logo.png" alt="Explore Iceland Logo" title="Explore Iceland">
+  </div>
+  <div class="rightIcon">
+    <img src="iceland.jpg" alt="Iceland Map" title="Iceland Map">
+  </div> <br> <br><br><br><br><br>
+  <hr>
+  <h1 class="indexHeading">Iceland</h1>
+  <p class="introInfo"><em><b>Iceland</b></em> is a country of sharp contrasts.
+    A place where fire and ice co-exist. Where dark winters are
+  offset by the summer's midnight sun. A country where insular
+existence has spurred a rich and vibrant culture.</p>
+</div> <br> <br>
+<div class="icelandSights">
+  <div class="iS1">
+    <p>Things to do in Iceland</p>
+  </div>
+    <figure class="iS2">
+      <img src="iceland3.jpg" alt="Aurora Borealis">
+      <figcaption><i>Northern Lights in Iceland</i></figcaption>
+    </figure>
+    <div class="iS3">
+      <p>The Aurora Borealis takes its name from the Roman goddess of dawn, Aurora, and the <br>
+      Greek name for the north wind, Boreas. From september to april, Iceland is a hotspot for this <br>
+      magnificent lightshow. <br>
+      The Aurora Borealis, more commonly referred to as the Northern Lights is a natural <br>
+      phenomenon created when particles emitted by the sun interact with the atmosphere in the <br>
+      Earth's magnetic field. This releases energy, causing peculiar luminous green streaks across <br>
+      the skies.</p>
+    </div>
+    <div class="iS4">
+      <p>When making a trip to Iceland, it is hard not to pay attention to the country's <br>
+         namesake---namely it's 4500 square miles of glacier. Ice climbing on the glaciers is <br>
+         practiced year-round and takes place mainly on the Sólheimajökull and Svínafellsjökull <br>
+         glaciers in the south of Iceland, to which day trips are offered from Reykjavik (and <br>
+         Skaftafell).
+       </p>
+    </div>
+    <figure class="iS5">
+      <img src="iceland1.jpg" alt="Glaciers" title="Icelandic Glaciers">
+      <figcaption><i>Ice climbing & hiking on glaciers</i></figcaption>
+    </figure>
+</div>
+<br><br><br>
+<h1>Upcoming Events</h1>
+<ul>
+  <li><a href="#">Eistnaflug Rock Festival</a></li>
+  <li><a href="#">Laugavegur Ultra Marathon</a></li>
+</ul> <br>
+<hr>
+<h1>Newsfeed</h1>
+<dl class="Newsfeed">
+  <dt><b><i>Norse mythology published as divination cards</i></b></dt>
+  <dd>Llewellyn Publications will be publishing 81-card divination deck bringing the wisdom of Norse mythology to life.
+  </dd>
+  <br>
+  <dt><b><i>Hollywood Reporter and Screen Daily give Icelandic director Elfar Aöalsteinsson great reviews</i></b></dt>
+  <dd>End of Sentence, by director Elfar Aölsteins, receives very positive reviews in leading film industry magazines such as Hollywood. The film's two <br>
+      leading actors, John Hawkes and Logan Lerman, are also praised in both reviews. Hawkes has quite a few films under his belt and was nominated <br>
+      for an Oscar for Winter's Bones and young Lerman is best known for his role in The Perks of Being a Wallflower. Icelandic actor Ólafur Darri <br>
+      Ólafsson also has a small part in End of Sentence. </dd>
+</dl>
+<br>
+<hr>
+<h1>How Much Does an Iceland Trip Cost?</h1>
+<table border="0">
+  <tr bgcolor="lightgreen">
+    <th width="300" class="table1"></th><th width="30">Price</th>
+  </tr>
+  <tr>
+    <th width="300" class="table1">Ticket from JK</th><th width="30" bgcolor="pink" class="table1">$1100</th>
+  </tr>
+  <tr>
+    <th width="300" class="table1">Hotel for 2 per night</th><th width="30" class="table1">$150</th>
+  </tr>
+  <tr>
+    <th width="300" class="table1">Food per person per day</th><th width="30" class="table1">$80</th>
+  </tr>
+  <tr>
+    <th width="300" class="table1">Attractions and Activities per person</th><th width="30" class="table1">$200</th>
+  </tr>
+  <tr bgcolor="lightgreen">
+    <th width="300">Total Cost per day per person</th><th width="30">$430</th>
+  </tr>
+</table>
+<hr>
+<h1>Contact Us</h1>
+<div class="contact">
+  <img src="phone.png" alt="phone" title="phone">
+  <img src="email.png" alt="email" title="email">
+  <img src="instagram.png" alt="instagram" title="instagram">
+</div>
+<div class="contactInfo">
+  <p><a href="#">1(800)999-9999</a> <br> <br> <br> Email to: <a href="mailto:rhyan.barrows@stu.bcc.cuny.edu">Rhyan Barrows </a> <br> <br> <br>
+  <a href="#">Follow us at instagram</a></p>
+</div>
+<hr> <br>
+<nav class="menu">
+  <a href="Project1.html">Home</a> |
+  <a href="northernLights.html">The Northern Lights</a> |
+  <a href="Hiking.html">Hiking on Glaciers</a> |
+  <a href="ContactForm.html">Contact Us</a>
+</nav> <br> <br>
+<footer> <b>2021 @ Project 1 by Rhyan Barrows </b></footer>
   </body>
 </html>
