--- a/Assignment3.html
+++ b/Assignment3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Assignment 3</title>
-    <link rel="stylesheet" href="Assignment3style.css">
+    <link rel="stylesheet" href="Assignment3Style.css">
   </head>
   <body>
     <div class="cars">
