--- a/Project1.html
+++ b/Project1.html
@@ -20,6 +20,7 @@
   offset by the summer's midnight sun. A country where insular
 existence has spurred a rich and vibrant culture.</p>
 </div> <br> <br>
+<div class="container">
 <div class="icelandSights">
   <div class="iS1">
     <p>Things to do in Iceland</p>
@@ -50,6 +51,7 @@ existence has spurred a rich and vibrant culture.</p>
       <figcaption><i>Ice climbing & hiking on glaciers</i></figcaption>
     </figure>
 </div>
+    </div>
 <br><br><br>
 <h1>Upcoming Events</h1>
 <ul>
