--- a/Project 2/Project2.html
+++ b/Project 2/Project2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Project 2</title>
-    <link rel="stylesheet" href="project2.css">
+    <link rel="stylesheet" href="Project2.css">
   </head>
   <body>
     <!-- Header -->
