--- a/lambo.html
+++ b/lambo.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <video autoplay muted loop class="myVideo">
-        <source src="../static/lambo.mp4" type="video/mp4">
+        <source src="lambo.mp4" type="video/mp4">
       </video>
       <div class="window" id="openWindow">
         <form action="{{url_for('thankyou')}}" method="POST" class="form1">
